# BigMarsRover

./: .gitignore  CMakeLists.txt  main.cpp
spine/: CMakeLists.txt  briter_encoder.cpp  briter_encoder.h  dynamixel_motor.cpp  dynamixel_motor.h  minicheetah_motor.cpp  minicheetah_motor.h  motor.cpp  motor.h  robomodule_motor.cpp  robomodule_motor.h  socketcan.cpp  socketcan.h
spine/DynamixelSDK/include/dynamixel_sdk/: group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
